
- GPR#1936: Add module Float.Array
  (Damien Doligez, review by Xavier Clerc and Alain Frisch)

- GPR#2002: Add Format.pp_print_custom_break, a new more general kind of break
  hint that can emit non-whitespace characters.
  (Vladimir Keleshev and Pierre Weis, review by Josh Berdine, Gabriel Radanne)

- GPR#2185: Add `List.filter_map`
  (Thomas Refis, review by Alain Frisch and Gabriel Scherer)

- GPR#2200: harden parsing of OCAMLRUNPARAM for Hashtbl.is_randomized ()
  (David Allsopp)

### Other libraries:

- GPR#1061: Add ?follow parameter to Unix.link. This allows hardlinking
  symlinks.
  (Christopher Zimmermann, review by Xavier Leroy, Damien Doligez, David
   Allsopp, David Sheets)

- GPR#2038: Deprecate vm threads
  (Jérémie Dimino)

* PR#4208, PR#4229, PR#4839, PR#6462, PR#6957, PR#6950, GPR#1063, GPR#2176:
  Make (nat)dynlink sound
  (Mark Shinwell, Leo White, Nicolás Ojeda Bär, Pierre Chambart)

### Compiler user-interface and warnings:

- GPR#2133: Warn on literal patterns found anywhere in a constructor's
  arguments.
  (Jeremy Yallop, review by Gabriel Scherer)

- PR#2096: Add source highlighting for errors & warnings in batch mode
  (Armaël Guéneau, review by Gabriel Scherer and Jérémie Dimino)

- PR#2091: Add a warning triggered by type declarations "type t = ()"
  (Armaël Guéneau, report by linse, review by Florian Angeletti and Gabriel
  Scherer)

- PR#6416, GPR#1120: unique printed names for identifiers
  (Florian Angeletti, review by Jacques Garrigue)

- MPR#7116, GPR#1430: new -config-var option
  to get the value of a single configuration variable in scripts.
  (Gabriel Scherer, review by Sébastien Hinderer and David Allsopp,
   request by Adrien Nader)

- GPR#1691: add shared_libraries to ocamlc -config exporting
  SUPPORTS_SHARED_LIBRARIES from Makefile.config.
  (David Allsopp, review by Gabriel Scherer and Mark Shinwell)

- GPR#1720: Improve error reporting for missing 'rec' in let-bindings.